# Mode-Connectivity

./: .dockerignore  .gitignore  .gitmodules  EVALUATION_AND_PLOTTING_GUIDE.md  MULTI_SEED_TRAINING.md  NEURON_SWAP_EXPERIMENTS.md  ORGANIZATION.md  PREDICTION_CHANGES_WORKFLOW.md  README.md  download_cifar10.py  project_report.tex  pyproject.toml  run_garipov_endpoints.py  script.py  submit.sh  submit_garipov.sh  train.py
configs/: config.yaml
configs/garipov/: vgg16_curve.yaml  vgg16_curve_l2_test.yaml  vgg16_curve_mirror.yaml  vgg16_curve_neuronswap_early2_reg.yaml  vgg16_curve_neuronswap_late2_reg.yaml  vgg16_curve_neuronswap_mid2_reg.yaml  vgg16_curve_seed0-mirror_reg.yaml  vgg16_curve_seed0-seed1_reg.yaml  vgg16_endpoints.yaml  vgg16_regularized_endpoints.yaml
docs/: DOCS_ORGANIZATION.md  EVALUATION_AND_PLOTTING_GUIDE.md  EXPERIMENTS.md  IMPLEMENTATION_SUMMARY.md  INITIALIZATION_EXPERIMENTS.md  L2_DISTANCE_TRACKING.md  MIGRATION_GUIDE.md  MULTI_SEED_TRAINING.md  NEURON_SWAP_METRIC_FIX.md  NEURON_SWAP_QUICKSTART.md  NEURON_SWAP_RESULTS.md  ORGANIZATION.md  PREDICTION_CHANGES_QUICKSTART.md  README.md  SYMMETRY_PLANE_METHOD.md
scripts/: run_prediction_changes_analysis.sh  test_symmetry_projection.sh
scripts/analysis/: README.md  analyze_curve.py  analyze_neuron_swap_distances.py  analyze_prediction_changes.py  analyze_predictions.py  calculate_endpoint_l2.py  calculate_init_distances.py  calculate_init_l2_norms.py  compare_checkpoints.py  compare_curves.py  compare_endpoint_accuracies.py  compare_initializations.py  evaluate_mirror.py  (+5 more)
src/: utils.py
(+142 files in other folders)
